# sandbox

./: LICENSE  README.md
projects/: index.html
projects/chatbot/: README.md  upper.py
projects/claude/resort_call_center/call_center_performance_analysis_system/: README.md  main.py  requirements.txt
projects/claude/resort_call_center/call_center_performance_analysis_system/analysis/: agent_analysis.py  agent_comparison.py  knowledge_scorer.py  niceness_scorer.py  pattern_extraction.py  technique_detector.py
projects/claude/resort_call_center/call_center_performance_analysis_system/data/: agent_metrics.csv  agents.csv  call_outcomes.csv  call_transcripts.csv  calls.csv  conversation_patterns.csv  generate_sample_data.py
projects/claude/resort_call_center/call_center_performance_analysis_system/insights/: generate_playbooks.py
projects/claude/resort_call_center/call_center_performance_analysis_system/reports/: generate_reports.py  (+1 more)
projects/css_tutorial_zero_to_hero/css/: style.css
projects/css_tutorial_zero_to_hero/html/: index.html  index1.html
projects/css_tutorial_zero_to_hero/img/: My Website.html
projects/flask/: app.py  pyproject.toml
projects/flask/templates/: index.html  update.html
projects/mermaid/: README.md
projects/poetry/: README.md
projects/poetry/poetry-demo/: pyproject.toml
projects/poetry/rp-hello/: hello.py  pyproject.toml
projects/poetry/rp-poetry/: pyproject.toml
projects/rocketpy/: pyproject.toml  python_meetup_session.ipynb
projects/streamlit/: pyproject.toml
projects/stubhub/: README.md  daddy.py
